redid the command map more testing